octocrab-derive/tests/ui/02-no-struct.stderr
error: only structs supported
 --> $DIR/02-no-struct.rs:4:1
  |
4 | enum Test {}
  | ^^^^^^^^^^^^
