octocrab-derive/tests/ui/02-no-struct.rs
#![allow(dead_code)]

#[derive(octocrab_derive::Builder)]
enum Test {}

fn main() {}
